update learnmore black  borders around the button to the correct alignment

--- a/scss/landing.css
+++ b/scss/landing.css
@@ -309,8 +309,8 @@ main {
   height: 3.5rem;
   border: 0.125rem solid #393939;
   box-sizing: border-box;
-  top: 140rem;
-  left: 10rem;
+  top: 142rem;
+  left: 10.25rem;
 }
 
 .discount {
